--- a/src/app/pages/questions-frequently-page/questions-frequently-page.component.html
+++ b/src/app/pages/questions-frequently-page/questions-frequently-page.component.html
@@ -19,39 +19,31 @@
 
 	<div class="faq-container">
 		<div class="faq-item">
-			<p class="faq-question"><strong>(1) ¿Cómo puedo registrarme en el sistema?</strong></p>
+			<p class="faq-question"><strong>¿Cómo puedo registrarme en el sistema?</strong></p>
 			<p class="faq-answer">
 				Para registrarte en nuestro sistema, ve a la página de registro y completa el formulario con tu información
 				personal.
 			</p>
 		</div>
-		<!-- Otras preguntas frecuentes aquí -->
 		<div class="faq-item">
-			<p class="faq-question"><strong>(2) ¿Como Interactuo con el bot?</strong></p>
-			<p class="faq-answer">
-				Para interactuar con el bot, tienes que hacerle una serie de preguntas para que el bot te entiendo, he de
-				recalcar que las preguntas para el bot tiene que ser muy espeicificas.
-			</p>
-		</div>
-		<div class="faq-item">
-			<p class="faq-question"><strong>(3) ¿Realmente la empresa es confiable?</strong></p>
+			<p class="faq-question"><strong>¿Realmente la empresa es confiable?</strong></p>
 			<p class="faq-answer">
 				La respuesta es si, no tendremos mucho tiempo en el mercado, pero si algo nos caracterisa como nueva empresa es
 				que somos muy confiables.
 			</p>
 		</div>
 		<div class="faq-item">
-			<p class="faq-question"><strong>(4) ¿Como puedo Comprar una entrada?</strong></p>
+			<p class="faq-question"><strong>¿Como puedo Comprar una entrada?</strong></p>
 			<p class="faq-answer">
 				Para comprar entradas tienes que ir al apartado de eventos y escoger el tipo de evento y realizar la compra.
 			</p>
 		</div>
 		<div class="faq-item">
-			<p class="faq-question"><strong>(5) ¿Quienes somos?</strong></p>
+			<p class="faq-question"><strong>¿Quienes somos?</strong></p>
 			<p class="faq-answer">Somos una empresa en la industria de la venta de entradas en línea.</p>
 		</div>
 		<div class="faq-item">
-			<p class="faq-question"><strong>(6) ¿De que trata esta pagina web?</strong></p>
+			<p class="faq-question"><strong>¿De que trata esta pagina web?</strong></p>
 			<p class="faq-answer">Esta pagina web se basa en la venta de entradas en linea de eventos Nacionales.</p>
 		</div>
 	</div>
@@ -65,21 +57,6 @@
 	</div>
 
 	<div style="height: 100px"></div>
-
-	<!--
-	<div class="footerDiv">
-		<div class="contact-info">
-			Llama al: <a href="tel:+123456789">+123 456 789</a> | Correo electrónico:
-			<a href="mailto:info@example.com">info@example.com</a>
-		</div>
-		<div class="contact-info">Horario de Atención: Lunes a Viernes de 9:00 AM a 5:00 PM</div>
-		<div>
-			<a class="whatsapp-link" href="https://web.whatsapp.com/" target="_blank">
-				<i class="whatsapp-icon fa fa-whatsapp"></i> WhatsApp
-			</a>
-		</div>
-	</div>
-	-->
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
