--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -25,7 +25,7 @@
 					<br />
 
 					<div class="content__login flex-column">
-						<span routerLink="{{ pathRecovery }}">¿Olvidaste tu contraseña?</span>
+						<!-- <span routerLink="{{ pathRecovery }}">¿Olvidaste tu contraseña?</span> -->
 						<button type="button" mat-raised-button color="primary" (click)="clickLogin()">INGRESAR</button>
 					</div>
 
